--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.2"
 authors = ["rstade <rainer.stademann@silverengine.de>"]
 
 [dependencies]
-eui48 = { version= "0.3", features=["serde"] }
+eui48 = { version= ">=0.3", features=["serde"] }
 uuid = { version = ">=0.7", features = ["v4", "serde"] }
 serde_derive = ">=1.0"
 serde = ">=1.0"
-e2d2 = { version = "=0.3.6", path = "../NetBricks/framework", features = ["performance"] }
+e2d2 = { version = "=0.4.0", path = "../NetBricks/framework", features = ["performance"] }
 log = ">=0.4"
 env_logger = ">=0.5"
 ipnet = ">=1.0"
 separator =  ">= 0.3"
+error-chain = ">=0.12"
+toml = ">=0.4"
