--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "netfcts"
-version = "0.1.5"
+version = "0.1.6"
 authors = ["rstade <rainer.stademann@silverengine.de>"]
 
 [dependencies]
@@ -8,11 +8,11 @@ eui48 = { version= ">=0.3", features=["serde"] }
 uuid = { version = ">=0.7", features = ["v4", "serde"] }
 serde_derive = ">=1.0"
 serde = ">=1.0"
-e2d2 = { version = "=0.5.2", path = "../NetBricks/framework", features = ["performance"] }
-log = ">=0.4"
+e2d2 = { version = "=1.0.1", path = "../NetBricks/framework", features = ["performance"] }
+log = "~0.4"
 env_logger = ">=0.5"
 ipnet = ">=1.0"
 separator =  ">= 0.3"
 error-chain = ">=0.12"
-toml = ">=0.4"
+toml = "~0.4"
 rand = ">=0.6"
